--- a/mediaLarge.css
+++ b/mediaLarge.css
@@ -120,17 +120,18 @@
       font-weight: normal; 
       font-size: 20px;
       margin-bottom: 20px;
+      margin-top: -20px;
     }
   
     #day{
   
-      margin-left: 75px;
+      margin-left: 70px;
       margin-right: 20px;
     }
     #hour{
   
       margin-left: 35px;
-      margin-right: 30px;
+      margin-right: 20px;
   
     }
   
@@ -139,7 +140,6 @@
       margin-left: 20px;
       margin-right: 38px;
     }
-  
     progress {
       border: 0;
       background-color: #dadae1;
