--- a/mediaLargest.css
+++ b/mediaLargest.css
@@ -95,22 +95,16 @@
     }
   
     #clockDay{
-  
-      margin-left: 120px;
-      margin-right: 25px;
+
+      margin-right:40px;
+   
     }
     #clockHour{
   
-      margin-left: 10px;
+  
       margin-right: 40px;
+   
   
-    }
-  
-  
-    #clockMinute{
-  
-      margin-left: 0px;
-      margin-right: 108px;
     }
   
   
@@ -120,17 +114,18 @@
       font-weight: normal; 
       font-size: 20px;
       margin-bottom: 20px;
+      margin-top: -20px;
     }
   
     #day{
   
-      margin-left: 75px;
+      margin-left: 61px;
       margin-right: 20px;
     }
     #hour{
   
       margin-left: 35px;
-      margin-right: 30px;
+      margin-right: 20px;
   
     }
   
