--- a/mediaTablet.css
+++ b/mediaTablet.css
@@ -78,22 +78,18 @@
     }
   
     #clockDay{
-  
-      margin-left: 28px;
-      margin-right: 30px;
+
+      margin-right:40px;
+   
     }
     #clockHour{
   
-      margin-left: 20px;
+  
       margin-right: 40px;
+   
   
     }
   
-  
-    #clockMinute{
-      margin-left: 10px;
-      margin-right: 30px;
-    }
   
   
     #day, #hour, #minute{
@@ -102,21 +98,22 @@
       font-weight: normal; 
       font-size: 14px;
       margin-bottom: 20px;
+      margin-top: -10px;
   
       
     }
   
     #day{
-  
+
+      margin-right: 44px;
       margin-left: 50px;
-      margin-right: 30px;
     }
     #hour{
   
-      margin-left: 25px;
-      margin-right: 30px;
+      margin-right: 13px;
   
     }
+  
   
   
     #minute{
